<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.activeviam.apps</groupId>
    <artifactId>pivot-springboot</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <description>Demo project for Spring Boot</description>

    <properties>
        <java.version>11</java.version>
        <activePivotVersion>6.0.4</activePivotVersion>
        <activeui.version>5.1.3</activeui.version>
        <admin-ui.version>5.1.1</admin-ui.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- import ActivePivot dependencies -->
            <dependency>
                <groupId>com.activeviam.activepivot</groupId>
                <artifactId>activepivot</artifactId>
                <version>${activePivotVersion}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- ActivePivot Dependencies -->
        <dependency>
            <groupId>com.activeviam.activepivot</groupId>
            <artifactId>activepivot-server-spring</artifactId>
            <version>${activePivotVersion}</version>
        </dependency>

        <!-- Dependencies for the content service persistence -->
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-hikaricp</artifactId>
        </dependency>

        <!-- Embedded content server UI -->
        <dependency>
            <groupId>com.activeviam.tech</groupId>
            <artifactId>admin-ui</artifactId>
            <version>${admin-ui.version}</version>
        </dependency>

        <!-- Embedded ActiveUI -->
        <dependency>
            <groupId>com.activeviam.activeui</groupId>
            <artifactId>activeui</artifactId>
            <version>${activeui.version}</version>
        </dependency>
        <dependency>
            <groupId>com.activeviam.activeui</groupId>
            <artifactId>activeui-initial-content</artifactId>
            <version>${activeui.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>com.activeviam.activepivot</groupId>
            <artifactId>activepivot-copper2-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.activeviam.tech</groupId>
            <artifactId>datastore-test</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
